--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <section id="home" class="bg-img">
+  <section id="home" class="bg-home-img">
     <nav class="navbar navbar-expand-sm fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#">
@@ -41,7 +41,7 @@
     <div class="row">
       <div class="col-md m-4">
         <div class="card drop-shadow card-rounded border-0">
-          <div class="hud-base-color card-bg-img card-rounded-top">
+          <div class="hud-base-bg-color card-bg-img card-rounded-top">
             <div class="card-body">
               <p class="card-title hud-green-color">Posicionamento Digital</p>
               <hr class="border-5 border-top">
@@ -50,14 +50,15 @@
           </div>
           <div class="card-body card-rounded-bottom">
             <p class="card-text small-text">
-              Ir além das redes sociais é necessário. Nossa missão é te ajudar a criar essa autoridade no mercado digital.
+              Ir além das redes sociais é necessário. Nossa missão é te ajudar a criar essa autoridade no mercado
+              digital.
             </p>
           </div>
         </div>
       </div>
       <div class="col-md m-4">
         <div class="card drop-shadow card-rounded border-0">
-          <div class="hud-base-color card-bg-img card-rounded-top">
+          <div class="hud-base-bg-color card-bg-img card-rounded-top">
             <div class="card-body">
               <p class="card-title hud-green-color">Design</p>
               <hr class="border-5 border-top">
@@ -66,14 +67,15 @@
           </div>
           <div class="card-body card-rounded-bottom">
             <p class="card-text small-text">
-              As artes gráficas existem para solucionar um determinado problema, seja ele qual for. Vamos usar os elementos visuais necessários que se comunicam com o seu público.
+              As artes gráficas existem para solucionar um determinado problema, seja ele qual for. Vamos usar os
+              elementos visuais necessários que se comunicam com o seu público.
             </p>
           </div>
         </div>
       </div>
       <div class="col-md m-4">
         <div class="card drop-shadow card-rounded border-0">
-          <div class="hud-base-color card-bg-img card-rounded-top">
+          <div class="hud-base-bg-color card-bg-img card-rounded-top">
             <div class="card-body">
               <p class="card-title hud-green-color">Planejamento</p>
               <hr class="border-5 border-top">
@@ -82,17 +84,18 @@
           </div>
           <div class="card-body card-rounded-bottom">
             <p class="card-text small-text">
-              Vamos criar um plano de marketing do início ao fim, passo a passo, traçando cada etapa até o nosso objetivo final.
+              Vamos criar um plano de marketing do início ao fim, passo a passo, traçando cada etapa até o nosso
+              objetivo final.
             </p>
           </div>
         </div>
       </div>
     </div>
-    
+
     <div class="row">
       <div class="col-md m-4">
         <div class="card drop-shadow card-rounded border-0">
-          <div class="hud-base-color card-bg-img card-rounded-top">
+          <div class="hud-base-bg-color card-bg-img card-rounded-top">
             <div class="card-body">
               <p class="card-title hud-green-color">Tráfego Pago</p>
               <hr class="border-5 border-top">
@@ -101,14 +104,15 @@
           </div>
           <div class="card-body card-rounded-bottom">
             <p class="card-text small-text">
-              Independente do seu produto/serviço você pode adotar estratégias de anúncios para alcançar o seu público. Aqui encontramos a ideal para você.
+              Independente do seu produto/serviço você pode adotar estratégias de anúncios para alcançar o seu público.
+              Aqui encontramos a ideal para você.
             </p>
           </div>
         </div>
       </div>
       <div class="col-md m-4">
         <div class="card drop-shadow card-rounded border-0">
-          <div class="hud-base-color card-bg-img card-rounded-top">
+          <div class="hud-base-bg-color card-bg-img card-rounded-top">
             <div class="card-body">
               <p class="card-title hud-green-color">E-mail Marketing</p>
               <hr class="border-5 border-top">
@@ -117,14 +121,15 @@
           </div>
           <div class="card-body card-rounded-bottom">
             <p class="card-text small-text">
-              Fazer o uso de e-mail marketing garante um vínculo maior com o cliente. Novidades, curiosidades e informações. Tudo isso direto e completo no e-mail do seu cliente em primeira mão.
+              Fazer o uso de e-mail marketing garante um vínculo maior com o cliente. Novidades, curiosidades e
+              informações. Tudo isso direto e completo no e-mail do seu cliente em primeira mão.
             </p>
           </div>
         </div>
       </div>
       <div class="col-md m-4">
         <div class="card drop-shadow card-rounded border-0">
-          <div class="hud-base-color card-bg-img card-rounded-top">
+          <div class="hud-base-bg-color card-bg-img card-rounded-top">
             <div class="card-body">
               <p class="card-title hud-green-color">Landing Page</p>
               <hr class="border-5 border-top">
@@ -133,14 +138,36 @@
           </div>
           <div class="card-body card-rounded-bottom">
             <p class="card-text small-text">
-              Você terá um novo espaço para atrair leads em potencial e fortalecer a imagem da sua marca, obtendo informações para permanecer em contato com cada um deles.
+              Você terá um novo espaço para atrair leads em potencial e fortalecer a imagem da sua marca, obtendo
+              informações para permanecer em contato com cada um deles.
             </p>
           </div>
         </div>
       </div>
     </div>
-  
+
   </section>
+  <section id="about" class="bg-about-gradient position-relative z-index-negative d-flex align-items-center">
+    <div class="container z-index-up">
+      <h3 class="title hud-base-color ms-lg-5">Nossa empresa</h3>
+      <div class="row">
+        <div class="col-12 col-lg-6 order-2 order-lg-1">
+          <img src="img/about-hudinhos.png" class="img-fluid" alt="team-hudinhos">
+        </div>
+        <div class="col-lg-6 order-1 order-lg-2">
+          <p>Acreditamos que não trabalhamos apenas com a comunicação e com o marketing de uma marca, mas também com sonhos
+            e histórias construídas até ali.
+            Nosso combustível é buscar a cada dia as melhores soluções para o posicionamento digital da sua empresa,
+            tornando-a autoridade e referência no seu nicho.
+            <br><br>
+            É aqui que o nosso propósito se une, e nosso time e o seu se torna um só!
+          </p>
+        </div>
+      </div>
+    </div>
+    <img src="img/about-frame.png" class="img-fluid position-absolute top-0 end-0 z-index-negative" alt="vectors">
+  </section>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="index.js"></script>
 </body>
