--- a/index.html
+++ b/index.html
@@ -167,6 +167,40 @@
     </div>
     <img src="img/about-frame.png" class="img-fluid position-absolute top-0 end-0 z-index-negative" alt="vectors">
   </section>
+  <section id="sucess-stories" class="container">
+    <div class="d-flex justify-content-center p-5">
+      <h3 class="title">Já é sucesso</h3>
+    </div>
+    <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-ride="true">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner drop-shadow-carousel border-carousel overflow-hidden height-carousel">
+        <div class="carousel-item active">
+          <img src="img/success-stories-1.png" class="d-none d-md-block w-100 h-100" alt="...">
+          <img src="img/success-stories-mobile-1.png" class="d-block d-md-none w-100 h-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="img/success-stories-1.png" class="d-none d-md-block w-100 h-100" alt="...">
+          <img src="img/success-stories-mobile-1.png" class="d-block d-md-none w-100 h-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="img/success-stories-1.png" class="d-none d-md-block w-100 h-100" alt="...">
+          <img src="img/success-stories-mobile-1.png" class="d-block d-md-none w-100 h-100" alt="...">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </section>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="index.js"></script>
