Add hallmark section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
     </nav>
   </section>
-  <section id="team" class="container">
+  <section id="methods" class="container">
     <div class="row">
       <div class="col-md m-4">
         <div class="card drop-shadow card-rounded border-0">
@@ -147,7 +147,7 @@
     </div>
 
   </section>
-  <section id="about" class="bg-about-gradient position-relative z-index-negative d-flex align-items-center">
+  <section id="team" class="bg-about-gradient position-relative z-index-negative d-flex align-items-center">
     <div class="container z-index-up">
       <h3 class="title hud-base-color ms-lg-5">Nossa empresa</h3>
       <div class="row">
@@ -155,7 +155,8 @@
           <img src="img/about-hudinhos.png" class="img-fluid" alt="team-hudinhos">
         </div>
         <div class="col-lg-6 order-1 order-lg-2">
-          <p>Acreditamos que não trabalhamos apenas com a comunicação e com o marketing de uma marca, mas também com sonhos
+          <p>Acreditamos que não trabalhamos apenas com a comunicação e com o marketing de uma marca, mas também com
+            sonhos
             e histórias construídas até ali.
             Nosso combustível é buscar a cada dia as melhores soluções para o posicionamento digital da sua empresa,
             tornando-a autoridade e referência no seu nicho.
@@ -173,9 +174,12 @@
     </div>
     <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-ride="true">
       <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+          aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+          aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+          aria-label="Slide 3"></button>
       </div>
       <div class="carousel-inner drop-shadow-carousel border-carousel overflow-hidden height-carousel">
         <div class="carousel-item active">
@@ -191,14 +195,110 @@
           <img src="img/success-stories-mobile-1.png" class="d-block d-md-none w-100 h-100" alt="...">
         </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
       </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
+    </div>
+  </section>
+  <section id="hallmark" class="container">
+    <div class="row hallmark-div">
+      <div class="col-xl-5 d-flex flex-column justify-content-around p-5">
+        <div>
+          <h3 class="hallmark-title hud-base-color text-center text-xl-start">Estamos aqui para criar uma marca de
+            sucesso,</h3>
+          <p class="hallmark-paragraph text-center text-xl-start">por isso fortificamos primeiro nossos pilares para
+            fortificar o seu.</p>
+        </div>
+        <div class="position-relative d-flex justify-content-center justify-content-xl-start">
+          <div class="hallmark-rectangle hud-green-bg-color w-75"></div>
+          <button type="button"
+            class="hallmark-btn hallmark-btn-text hud-green-bg-color text-center position-absolute top-0 border-0 w-75">Solicite
+            o seu orçamento</button>
+        </div>
+      </div>
+      <div class="col-xl-7">
+        <div class="row">
+          <div class="col-md-6 p-2">
+            <div class="hallmark-card overflow-hidden">
+              <div class="card">
+                <div class="card-body">
+                  <div class="d-flex align-items-center h-50">
+                    <img src="img/hallmark-card-pic-1.png" alt="">
+                    <div class="ps-3">
+                      <h4 class="hallmark-card-title hud-base-color">Comunicação</h4>
+                      <div class="hallmark-card-hr hud-green-bg-color"></div>
+                    </div>
+                  </div>
+                <p class="hallmark-card-paragraph">Não é apenas um atendimento, criamos um relacionamento com você e sua marca. Somos "alguém" que você sempre pode contar.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 p-2">
+            <div class="hallmark-card overflow-hidden">
+              <div class="card">
+                <div class="card-body">
+                  <div class="d-flex align-items-center h-50">
+                    <img src="img/hallmark-card-pic-2.png" alt="">
+                    <div class="ps-3">
+                      <h4 class="hallmark-card-title hud-base-color text-nowrap">Foco no Digital</h4>
+                      <div class="hallmark-card-hr hud-green-bg-color"></div>
+                    </div>
+                  </div>
+                <p class="hallmark-card-paragraph">
+                  Deixar o digital de lado é o mesmo que voltar para o século passado.
+                </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6 p-2">
+            <div class="hallmark-card overflow-hidden">
+              <div class="card">
+                <div class="card-body">
+                  <div class="d-flex align-items-center h-50">
+                    <img src="img/hallmark-card-pic-3.png" alt="">
+                    <div class="ps-3">
+                      <h4 class="hallmark-card-title hud-base-color">#Team HuD</h4>
+                      <div class="hallmark-card-hr hud-green-bg-color"></div>
+                    </div>
+                  </div>
+                <p class="hallmark-card-paragraph">
+                  Somos um time, vamos trabalhar juntos sempre.
+                </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 p-2">
+            <div class="hallmark-card overflow-hidden">
+              <div class="card">
+                <div class="card-body">
+                  <div class="d-flex align-items-center h-50">
+                    <img src="img/hallmark-card-pic-4.png" alt="">
+                    <div class="ps-3">
+                      <h4 class="hallmark-card-title hud-base-color">Sem você a HuD não existiria</h4>
+                      <div class="hallmark-card-hr hud-green-bg-color"></div>
+                    </div>
+                  </div>
+                <p class="hallmark-card-paragraph">
+                  Com os seus resultados também avançamos
+                </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
