Fix sections height partially

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0">
   <title>Landing Page Ana</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -37,7 +37,7 @@
       </div>
     </nav>
   </section>
-  <section id="methods" class="container">
+  <section id="methods" class="container py-5">
     <div class="row">
       <div class="col-md m-4">
         <div class="card drop-shadow card-rounded border-0">
@@ -147,7 +147,7 @@
     </div>
 
   </section>
-  <section id="team" class="bg-about-gradient position-relative z-index-negative d-flex align-items-center">
+  <section id="team" class="bg-about-gradient position-relative z-index-negative d-flex align-items-center py-5">
     <div class="container z-index-up">
       <h3 class="title hud-base-color ms-lg-5">Nossa empresa</h3>
       <div class="row">
@@ -168,8 +168,8 @@
     </div>
     <img src="img/about-frame.png" class="img-fluid position-absolute top-0 end-0 z-index-negative" alt="vectors">
   </section>
-  <section id="sucess-stories" class="container">
-    <div class="d-flex justify-content-center p-5">
+  <section id="sucess-stories" class="container pt-5">
+    <div class="d-flex justify-content-center">
       <h3 class="title">Já é sucesso</h3>
     </div>
     <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-ride="true">
@@ -207,9 +207,9 @@
       </button>
     </div>
   </section>
-  <section id="hallmark" class="container">
+  <section id="hallmark" class="container bg-secondary">
     <div class="row hallmark-div">
-      <div class="col-xl-5 d-flex flex-column justify-content-around p-5">
+      <div class="col-xl-5 d-flex flex-column justify-content-around pb-5">
         <div>
           <h3 class="hallmark-title hud-base-color text-center text-xl-start">Estamos aqui para criar uma marca de
             sucesso,</h3>
@@ -223,7 +223,7 @@
             o seu orçamento</button>
         </div>
       </div>
-      <div class="col-xl-7">
+      <div class="col-xl-7 d-flex flex-column justify-content-evenly">
         <div class="row">
           <div class="col-md-6 p-2">
             <div class="hallmark-card overflow-hidden">
