Fix contact sectio height and spacing

--- a/index.html
+++ b/index.html
@@ -302,11 +302,11 @@
     </div>
   </section>
   <section id="contact" class="bg-contact">
-    <div class="bg-contact-img h-100 d-flex flex-column justify-content-center">
+    <div class="bg-contact-img h-100 d-flex flex-column justify-content-center py-5">
       <div class="d-flex justify-content-center align-items-center">
-        <div class="contact-wrapper text-center w-75">
+        <div class="contact-wrapper text-center w-75 pb-md-3">
           <h2 class="contact-title hud-green-color">E aí, topa iniciar uma parceria?</h2>
-          <h3 class="contact-subtitle hud-white-color">Preencha abaixo e seja um dos nossos cases de sucesso.</h3>
+          <h3 class="contact-subtitle hud-white-color pb-5">Preencha abaixo e seja um dos nossos cases de sucesso.</h3>
           <form class="contact-form d-flex flex-column justify-content-evenly">
             <div class="mb-3">
               <label for="name" class="form-label contact-form-label hud-green-color mb-4">Nome e sobrenome</label>
@@ -316,7 +316,7 @@
               <label for="phone" class="form-label contact-form-label hud-green-color mb-4">Telefone</label>
               <input type="tel" class="contact-form-control" id="phone">
             </div>
-            <div class="mb-3">
+            <div class="mb-5">
               <label for="email" class="form-label contact-form-label hud-green-color mb-4">E-mail</label>
               <input type="email" class="contact-form-control" id="email">
             </div>
