Update hallmark card heights and titles font-size

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
       </button>
     </div>
   </section>
-  <section id="hallmark" class="container bg-secondary">
+  <section id="hallmark" class="container bg-secondary py-3">
     <div class="row hallmark-div">
       <div class="col-xl-5 d-flex flex-column justify-content-around pb-5">
         <div>
