--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0">
   <title>Landing Page Ana</title>
-  <link rel="stylesheet" href="style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -38,6 +40,7 @@
     </nav>
   </section>
   <section id="methods" class="container py-5">
+    <h3 class="title hud-base-color ms-lg-5">Nossos métodos</h3>
     <div class="row">
       <div class="col-md m-4">
         <div class="card drop-shadow card-rounded border-0">
@@ -236,7 +239,8 @@
                       <div class="hallmark-card-hr hud-green-bg-color"></div>
                     </div>
                   </div>
-                <p class="hallmark-card-paragraph">Não é apenas um atendimento, criamos um relacionamento com você e sua marca. Somos "alguém" que você sempre pode contar.</p>
+                  <p class="hallmark-card-paragraph">Não é apenas um atendimento, criamos um relacionamento com você e
+                    sua marca. Somos "alguém" que você sempre pode contar.</p>
                 </div>
               </div>
             </div>
@@ -252,9 +256,9 @@
                       <div class="hallmark-card-hr hud-green-bg-color"></div>
                     </div>
                   </div>
-                <p class="hallmark-card-paragraph">
-                  Deixar o digital de lado é o mesmo que voltar para o século passado.
-                </p>
+                  <p class="hallmark-card-paragraph">
+                    Deixar o digital de lado é o mesmo que voltar para o século passado.
+                  </p>
                 </div>
               </div>
             </div>
@@ -272,9 +276,9 @@
                       <div class="hallmark-card-hr hud-green-bg-color"></div>
                     </div>
                   </div>
-                <p class="hallmark-card-paragraph">
-                  Somos um time, vamos trabalhar juntos sempre.
-                </p>
+                  <p class="hallmark-card-paragraph">
+                    Somos um time, vamos trabalhar juntos sempre.
+                  </p>
                 </div>
               </div>
             </div>
@@ -290,9 +294,9 @@
                       <div class="hallmark-card-hr hud-green-bg-color"></div>
                     </div>
                   </div>
-                <p class="hallmark-card-paragraph">
-                  Com os seus resultados também avançamos
-                </p>
+                  <p class="hallmark-card-paragraph">
+                    Com os seus resultados também avançamos
+                  </p>
                 </div>
               </div>
             </div>
@@ -302,7 +306,7 @@
     </div>
   </section>
   <section id="contact" class="bg-contact">
-    <div class="bg-contact-img h-100 d-flex flex-column justify-content-center py-5">
+    <div class="bg-contact-img h-100 d-flex flex-column justify-content-center py-6">
       <div class="d-flex justify-content-center align-items-center">
         <div class="contact-wrapper text-center w-75 pb-md-3">
           <h2 class="contact-title hud-green-color">E aí, topa iniciar uma parceria?</h2>
@@ -310,25 +314,46 @@
           <form class="contact-form d-flex flex-column justify-content-evenly">
             <div class="mb-3">
               <label for="name" class="form-label contact-form-label hud-green-color mb-4">Nome e sobrenome</label>
-              <input type="text" class="contact-form-control" id="name">
+              <input type="text" class="contact-form-control p-5" id="name">
             </div>
             <div class="mb-3">
               <label for="phone" class="form-label contact-form-label hud-green-color mb-4">Telefone</label>
-              <input type="tel" class="contact-form-control" id="phone">
+              <input type="tel" class="contact-form-control p-5" id="phone">
             </div>
             <div class="mb-5">
               <label for="email" class="form-label contact-form-label hud-green-color mb-4">E-mail</label>
-              <input type="email" class="contact-form-control" id="email">
+              <input type="email" class="contact-form-control p-5" id="email">
             </div>
             <div class="position-relative d-flex justify-content-center">
               <div class="contact-rectangle hallmark-rectangle hud-green-bg-color w-50"></div>
-              <button type="submit" class="contact-rectangle hallmark-btn hallmark-btn-text hud-green-bg-color text-center position-absolute top-0 border-0 w-50">Enviar</button>
+              <button type="submit"
+                class="contact-rectangle hallmark-btn hallmark-btn-text hud-green-bg-color text-center position-absolute top-0 border-0 w-50">Enviar</button>
             </div>
           </form>
         </div>
       </div>
     </div>
   </section>
+  <footer class="hud-base-bg-color pt-6 pb-5 mt-n1">
+    <div class="container d-flex justify-content-between align-items-center flex-column flex-md-row">
+      <a href="#home" >
+        <img src="img/logo-full.png" alt="logo complete">
+      </a>
+      <ul class="nav list-unstyled">
+        <li class="ms-4"><a href="#"><img src="img/instagram-icon.png" alt=""></a></li>
+        <li class="ms-4"><a href="#"><img src="img/fb-icon.png" alt=""></a></li>
+        <li class="ms-4"><a href="#"><img src="img/linkedin-icon.png" alt=""></a></li>
+        <li class="ms-4"><a href="#"><img src="img/youtube-icon.png" alt=""></a></li>
+      </ul>
+    </div>
+    <div class="container">
+      <div class="hud-white-color d-flex justify-content-center mt-5">
+        <p>© HuD Comunicação. Todos os direitos reservados.</p>
+        <p class="ms-5">Política de Privacidade</p>
+        <p class="ms-5">Termos e Condições</p>
+      </div>
+    </div>
+  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="index.js"></script>
