--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -21,18 +21,18 @@
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon navbar-dark"></span>
         </button>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-          <ul class="navbar-nav text-uppercase text-center">
+        <div class="offset-md-3 offset-xl-5 collapse navbar-collapse" id="navbarNav">
+          <ul class="ps-lg-5 flex-grow-1 justify-content-between navbar-nav text-uppercase text-center text-nowrap">
             <li class="nav-item">
-              <a class="nav-link active text-white" aria-current="page" href="#home">Home</a>
+              <a class="nav-link active text-white d-inline-block d-sm-block" aria-current="page" href="#home">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#team">nosso time</a>
+              <a class="nav-link text-white d-inline-block d-sm-block" href="#team">nosso time</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">contato</a>
+              <a class="nav-link text-white d-inline-block d-sm-block" href="#contact">contato</a>
             </li>
           </ul>
         </div>
