--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <section id="home" class="bg-home-img">
+  <section id="home" class="bg-home-img bg-cover d-flex align-items-center justify-content-center">
     <nav class="navbar navbar-expand-sm fixed-top">
-      <div class="container">
+      <div class="container-lg">
         <a class="navbar-brand" href="#">
           <img src="img/logo.png" alt="Logo" width="100" height="76">
         </a>
@@ -23,8 +23,8 @@
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon navbar-dark"></span>
         </button>
-        <div class="offset-md-3 offset-xl-5 collapse navbar-collapse" id="navbarNav">
-          <ul class="ps-lg-5 flex-grow-1 justify-content-between navbar-nav text-uppercase text-center text-nowrap">
+        <div class="offset-lg-3 offset-xl-5 collapse navbar-collapse" id="navbarNav">
+          <ul class="ps-lg-5 flex-grow-1 justify-content-evenly justify-content-lg-between navbar-nav text-uppercase text-center text-nowrap">
             <li class="nav-item">
               <a class="nav-link active text-white d-inline-block d-sm-block" aria-current="page" href="#home">Home</a>
             </li>
@@ -38,13 +38,18 @@
         </div>
       </div>
     </nav>
+    <div class="home-div d-flex flex-column align-items-center">
+      <h1 class="hud-white-color">É chegada a hora de</h1>
+      <h2 class="hud-white-color d-inline-block text-center mb-3">se posicionar no mercado digital<span class="hud-green-color home-span">_</span></h2>
+      <button type="button" class="home-btn">Clique aqui e saiba mais</button>
+    </div>
   </section>
-  <section id="methods" class="container py-5">
+  <section id="methods" class="container pb-5">
     <h3 class="title hud-base-color ms-lg-5">Nossos métodos</h3>
     <div class="row">
       <div class="col-md m-4">
         <div class="card drop-shadow card-rounded border-0">
-          <div class="hud-base-bg-color card-bg-img card-rounded-top">
+          <div class="hud-base-bg-color card-bg-img bg-cover card-rounded-top">
             <div class="card-body">
               <p class="card-title hud-green-color">Posicionamento Digital</p>
               <hr class="border-5 border-top">
@@ -61,7 +66,7 @@
       </div>
       <div class="col-md m-4">
         <div class="card drop-shadow card-rounded border-0">
-          <div class="hud-base-bg-color card-bg-img card-rounded-top">
+          <div class="hud-base-bg-color card-bg-img bg-cover card-rounded-top">
             <div class="card-body">
               <p class="card-title hud-green-color">Design</p>
               <hr class="border-5 border-top">
@@ -78,7 +83,7 @@
       </div>
       <div class="col-md m-4">
         <div class="card drop-shadow card-rounded border-0">
-          <div class="hud-base-bg-color card-bg-img card-rounded-top">
+          <div class="hud-base-bg-color card-bg-img bg-cover card-rounded-top">
             <div class="card-body">
               <p class="card-title hud-green-color">Planejamento</p>
               <hr class="border-5 border-top">
@@ -98,7 +103,7 @@
     <div class="row">
       <div class="col-md m-4">
         <div class="card drop-shadow card-rounded border-0">
-          <div class="hud-base-bg-color card-bg-img card-rounded-top">
+          <div class="hud-base-bg-color card-bg-img bg-cover card-rounded-top">
             <div class="card-body">
               <p class="card-title hud-green-color">Tráfego Pago</p>
               <hr class="border-5 border-top">
@@ -115,7 +120,7 @@
       </div>
       <div class="col-md m-4">
         <div class="card drop-shadow card-rounded border-0">
-          <div class="hud-base-bg-color card-bg-img card-rounded-top">
+          <div class="hud-base-bg-color card-bg-img bg-cover card-rounded-top">
             <div class="card-body">
               <p class="card-title hud-green-color">E-mail Marketing</p>
               <hr class="border-5 border-top">
@@ -132,7 +137,7 @@
       </div>
       <div class="col-md m-4">
         <div class="card drop-shadow card-rounded border-0">
-          <div class="hud-base-bg-color card-bg-img card-rounded-top">
+          <div class="hud-base-bg-color card-bg-img bg-cover card-rounded-top">
             <div class="card-body">
               <p class="card-title hud-green-color">Landing Page</p>
               <hr class="border-5 border-top">
