Fix space and sizing on screens < 578px

--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
         </div>
       </div>
     </nav>
-    <div class="home-div d-flex flex-column align-items-center">
+    <div class="d-flex flex-column align-items-center px-2 text-center">
       <h1 class="hud-white-color">É chegada a hora de</h1>
-      <h2 class="hud-white-color d-inline-block text-center mb-3">se posicionar no mercado digital<span class="hud-green-color home-span">_</span></h2>
-      <button type="button" class="home-btn">Clique aqui e saiba mais</button>
+      <h2 class="hud-white-color d-inline-block">se posicionar no mercado digital<span class="hud-green-color home-span">_</span></h2>
+      <button type="button" class="home-btn mt-3">Clique aqui e saiba mais</button>
     </div>
   </section>
   <section id="methods" class="container pb-5">
-    <h3 class="title hud-base-color ms-lg-5">Nossos métodos</h3>
+    <h3 class="title hud-base-color">Nossos métodos</h3>
     <div class="row">
       <div class="col-md m-4">
         <div class="card drop-shadow card-rounded border-0">
