Update and fix methods section

--- a/index.html
+++ b/index.html
@@ -44,108 +44,105 @@
       <button type="button" class="home-btn mt-3">Clique aqui e saiba mais</button>
     </div>
   </section>
-  <section id="methods" class="container pb-5">
+  <section id="methods" class="container">
     <h3 class="title hud-base-color">Nossos métodos</h3>
-    <div class="row">
-      <div class="col-md m-4">
-        <div class="card drop-shadow card-rounded border-0">
-          <div class="hud-base-bg-color card-bg-img bg-cover card-rounded-top">
+    <div class="row g-5 mt-2">
+      <div class="col">
+        <div class="card h-100 drop-shadow card-rounded border-0 overflow-hidden">
+          <div class="hud-base-bg-color card-bg-img bg-cover">
             <div class="card-body">
               <p class="card-title hud-green-color">Posicionamento Digital</p>
-              <hr class="border-5 border-top">
+              <hr class="methods-hr border-5 border-top">
               <p class="card-text hud-green-color small-title">Posicione sua empresa na internet!</p>
             </div>
           </div>
-          <div class="card-body card-rounded-bottom">
-            <p class="card-text small-text">
+          <div class="card-body card-bg-color">
+            <p class="card-text small-text hud-base-color">
               Ir além das redes sociais é necessário. Nossa missão é te ajudar a criar essa autoridade no mercado
               digital.
             </p>
           </div>
         </div>
       </div>
-      <div class="col-md m-4">
-        <div class="card drop-shadow card-rounded border-0">
-          <div class="hud-base-bg-color card-bg-img bg-cover card-rounded-top">
+      <div class="col">
+        <div class="card h-100 drop-shadow card-rounded border-0 overflow-hidden">
+          <div class="hud-base-bg-color card-bg-img bg-cover">
             <div class="card-body">
               <p class="card-title hud-green-color">Design</p>
-              <hr class="border-5 border-top">
+              <hr class="methods-hr border-5 border-top">
               <p class="card-text hud-green-color small-title">Não é apenas uma artezinha.</p>
             </div>
           </div>
-          <div class="card-body card-rounded-bottom">
-            <p class="card-text small-text">
+          <div class="card-body card-bg-color">
+            <p class="card-text small-text hud-base-color">
               As artes gráficas existem para solucionar um determinado problema, seja ele qual for. Vamos usar os
               elementos visuais necessários que se comunicam com o seu público.
             </p>
           </div>
         </div>
       </div>
-      <div class="col-md m-4">
-        <div class="card drop-shadow card-rounded border-0">
-          <div class="hud-base-bg-color card-bg-img bg-cover card-rounded-top">
+      <div class="col">
+        <div class="card h-100 drop-shadow card-rounded border-0 overflow-hidden">
+          <div class="hud-base-bg-color card-bg-img bg-cover">
             <div class="card-body">
               <p class="card-title hud-green-color">Planejamento</p>
-              <hr class="border-5 border-top">
+              <hr class="methods-hr border-5 border-top">
               <p class="card-text hud-green-color small-title">O que seria de uma ação sem planejamento?</p>
             </div>
           </div>
-          <div class="card-body card-rounded-bottom">
-            <p class="card-text small-text">
+          <div class="card-body card-bg-color">
+            <p class="card-text small-text hud-base-color">
               Vamos criar um plano de marketing do início ao fim, passo a passo, traçando cada etapa até o nosso
               objetivo final.
             </p>
           </div>
         </div>
       </div>
-    </div>
-
-    <div class="row">
-      <div class="col-md m-4">
-        <div class="card drop-shadow card-rounded border-0">
-          <div class="hud-base-bg-color card-bg-img bg-cover card-rounded-top">
+      <div class="col">
+        <div class="card h-100 drop-shadow card-rounded border-0 overflow-hidden">
+          <div class="hud-base-bg-color card-bg-img bg-cover">
             <div class="card-body">
               <p class="card-title hud-green-color">Tráfego Pago</p>
-              <hr class="border-5 border-top">
+              <hr class="methods-hr border-5 border-top">
               <p class="card-text hud-green-color small-title">Já imaginou alcançar milhares de pessoas?</p>
             </div>
           </div>
-          <div class="card-body card-rounded-bottom">
-            <p class="card-text small-text">
+          <div class="card-body card-bg-color">
+            <p class="card-text small-text hud-base-color">
               Independente do seu produto/serviço você pode adotar estratégias de anúncios para alcançar o seu público.
               Aqui encontramos a ideal para você.
             </p>
           </div>
         </div>
       </div>
-      <div class="col-md m-4">
-        <div class="card drop-shadow card-rounded border-0">
-          <div class="hud-base-bg-color card-bg-img bg-cover card-rounded-top">
+      <div class="col">
+        <div class="card h-100 drop-shadow card-rounded border-0 overflow-hidden">
+          <div class="hud-base-bg-color card-bg-img bg-cover">
             <div class="card-body">
               <p class="card-title hud-green-color">E-mail Marketing</p>
-              <hr class="border-5 border-top">
+              <hr class="methods-hr border-5 border-top">
               <p class="card-text hud-green-color small-title">Comunicação muito além das redes sociais.</p>
             </div>
           </div>
-          <div class="card-body card-rounded-bottom">
-            <p class="card-text small-text">
+          <div class="card-body card-bg-color">
+            <p class="card-text small-text hud-base-color">
               Fazer o uso de e-mail marketing garante um vínculo maior com o cliente. Novidades, curiosidades e
               informações. Tudo isso direto e completo no e-mail do seu cliente em primeira mão.
             </p>
           </div>
         </div>
       </div>
-      <div class="col-md m-4">
-        <div class="card drop-shadow card-rounded border-0">
-          <div class="hud-base-bg-color card-bg-img bg-cover card-rounded-top">
+      <div class="col">
+        <div class="card h-100 drop-shadow card-rounded border-0 overflow-hidden">
+          <div class="hud-base-bg-color card-bg-img bg-cover">
             <div class="card-body">
               <p class="card-title hud-green-color">Landing Page</p>
-              <hr class="border-5 border-top">
+              <hr class="methods-hr border-5 border-top">
               <p class="card-text hud-green-color small-title">Geração de lead e informação.</p>
             </div>
           </div>
-          <div class="card-body card-rounded-bottom">
-            <p class="card-text small-text">
+          <div class="card-body card-bg-color">
+            <p class="card-text small-text hud-base-color">
               Você terá um novo espaço para atrair leads em potencial e fortalecer a imagem da sua marca, obtendo
               informações para permanecer em contato com cada um deles.
             </p>
