--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   </section>
   <section id="methods" class="container">
     <h3 class="title hud-base-color">Nossos métodos</h3>
-    <div class="row g-5 mt-2">
+    <div id="md-block" class="row g-5 mt-2 d-none d-md-flex">
       <div class="col">
         <div class="card h-100 drop-shadow card-rounded border-0 overflow-hidden">
           <div class="hud-base-bg-color card-bg-img bg-cover">
@@ -150,6 +150,124 @@
         </div>
       </div>
     </div>
+    <div id="xs-block" class="d-block d-md-none mt-5">
+      <div id="methods-carousel" class="carousel carousel-dark slide" data-bs-ride="true">
+        <div class="carousel-inner overflow-visible">
+          <div class="carousel-item active">
+            <div class="card drop-shadow card-rounded border-0 overflow-hidden">
+              <div class="hud-base-bg-color card-bg-img bg-cover">
+                <div class="card-body">
+                  <p class="card-title hud-green-color">Posicionamento Digital</p>
+                  <hr class="methods-hr border-5 border-top">
+                  <p class="card-text hud-green-color small-title">Posicione sua empresa na internet!</p>
+                </div>
+              </div>
+              <div class="card-body card-bg-color">
+                <p class="card-text small-text hud-base-color">
+                  Ir além das redes sociais é necessário. Nossa missão é te ajudar a criar essa autoridade no mercado
+                  digital.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="card drop-shadow card-rounded border-0 overflow-hidden">
+              <div class="hud-base-bg-color card-bg-img bg-cover">
+                <div class="card-body">
+                  <p class="card-title hud-green-color">Design</p>
+                  <hr class="methods-hr border-5 border-top">
+                  <p class="card-text hud-green-color small-title">Não é apenas uma artezinha.</p>
+                </div>
+              </div>
+              <div class="card-body card-bg-color">
+                <p class="card-text small-text hud-base-color">
+                  As artes gráficas existem para solucionar um determinado problema, seja ele qual for. Vamos usar os
+                  elementos visuais necessários que se comunicam com o seu público.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="card drop-shadow card-rounded border-0 overflow-hidden">
+              <div class="hud-base-bg-color card-bg-img bg-cover">
+                <div class="card-body">
+                  <p class="card-title hud-green-color">Planejamento</p>
+                  <hr class="methods-hr border-5 border-top">
+                  <p class="card-text hud-green-color small-title">O que seria de uma ação sem planejamento?</p>
+                </div>
+              </div>
+              <div class="card-body card-bg-color">
+                <p class="card-text small-text hud-base-color">
+                  Vamos criar um plano de marketing do início ao fim, passo a passo, traçando cada etapa até o nosso
+                  objetivo final.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="card drop-shadow card-rounded border-0 overflow-hidden">
+              <div class="hud-base-bg-color card-bg-img bg-cover">
+                <div class="card-body">
+                  <p class="card-title hud-green-color">Tráfego Pago</p>
+                  <hr class="methods-hr border-5 border-top">
+                  <p class="card-text hud-green-color small-title">Já imaginou alcançar milhares de pessoas?</p>
+                </div>
+              </div>
+              <div class="card-body card-bg-color">
+                <p class="card-text small-text hud-base-color">
+                  Independente do seu produto/serviço você pode adotar estratégias de anúncios para alcançar o seu público.
+                  Aqui encontramos a ideal para você.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="card drop-shadow card-rounded border-0 overflow-hidden">
+              <div class="hud-base-bg-color card-bg-img bg-cover">
+                <div class="card-body">
+                  <p class="card-title hud-green-color">E-mail Marketing</p>
+                  <hr class="methods-hr border-5 border-top">
+                  <p class="card-text hud-green-color small-title">Comunicação muito além das redes sociais.</p>
+                </div>
+              </div>
+              <div class="card-body card-bg-color">
+                <p class="card-text small-text hud-base-color">
+                  Fazer o uso de e-mail marketing garante um vínculo maior com o cliente. Novidades, curiosidades e
+                  informações. Tudo isso direto e completo no e-mail do seu cliente em primeira mão.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="card drop-shadow card-rounded border-0 overflow-hidden">
+              <div class="hud-base-bg-color card-bg-img bg-cover">
+                <div class="card-body">
+                  <p class="card-title hud-green-color">Landing Page</p>
+                  <hr class="methods-hr border-5 border-top">
+                  <p class="card-text hud-green-color small-title">Geração de lead e informação.</p>
+                </div>
+              </div>
+              <div class="card-body card-bg-color">
+                <p class="card-text small-text hud-base-color">
+                  Você terá um novo espaço para atrair leads em potencial e fortalecer a imagem da sua marca, obtendo
+                  informações para permanecer em contato com cada um deles.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#methods-carousel"
+          data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#methods-carousel"
+          data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div>
 
   </section>
   <section id="team" class="bg-about-gradient position-relative z-index-negative d-flex align-items-center py-5">
@@ -173,17 +291,17 @@
     </div>
     <img src="img/about-frame.png" class="img-fluid position-absolute top-0 end-0 z-index-negative" alt="vectors">
   </section>
-  <section id="sucess-stories" class="container pt-5">
+  <section id="success-stories" class="container pt-5">
     <div class="d-flex justify-content-center">
       <h3 class="title">Já é sucesso</h3>
     </div>
-    <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-ride="true">
+    <div id="success-stories-carousel" class="carousel carousel-dark slide" data-bs-ride="true">
       <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+        <button type="button" data-bs-target="#success-stories-carousel" data-bs-slide-to="0" class="active"
           aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+        <button type="button" data-bs-target="#success-stories-carousel" data-bs-slide-to="1"
           aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+        <button type="button" data-bs-target="#success-stories-carousel" data-bs-slide-to="2"
           aria-label="Slide 3"></button>
       </div>
       <div class="carousel-inner drop-shadow-carousel border-carousel overflow-hidden height-carousel">
@@ -200,12 +318,12 @@
           <img src="img/success-stories-mobile-1.png" class="d-block d-md-none w-100 h-100" alt="...">
         </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+      <button class="carousel-control-prev" type="button" data-bs-target="#success-stories-carousel"
         data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
       </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+      <button class="carousel-control-next" type="button" data-bs-target="#success-stories-carousel"
         data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
