--- a/index.html
+++ b/index.html
@@ -270,15 +270,15 @@
     </div>
 
   </section>
-  <section id="team" class="bg-about-gradient position-relative z-index-negative d-flex align-items-center py-5">
-    <div class="container z-index-up">
-      <h3 class="title hud-base-color ms-lg-5">Nossa empresa</h3>
-      <div class="row">
-        <div class="col-12 col-lg-6 order-2 order-lg-1">
-          <img src="img/about-hudinhos.png" class="img-fluid" alt="team-hudinhos">
+  <section id="team" class="bg-team-gradient position-relative overflow-hidden">
+    <div class="container position-relative z-index-up">
+      <h3 class="title hud-base-color">Nossa empresa</h3>
+      <div class="row pt-3">
+        <div class="col-12 col-lg-6 d-flex order-2 order-lg-1">
+          <img src="img/team-hudinhos.png" class="img-fluid" alt="team-hudinhos">
         </div>
-        <div class="col-lg-6 order-1 order-lg-2">
-          <p>Acreditamos que não trabalhamos apenas com a comunicação e com o marketing de uma marca, mas também com
+        <div class="col-lg-6 d-flex align-items-center order-1 order-lg-2">
+          <p class="team-p">Acreditamos que não trabalhamos apenas com a comunicação e com o marketing de uma marca, mas também com
             sonhos
             e histórias construídas até ali.
             Nosso combustível é buscar a cada dia as melhores soluções para o posicionamento digital da sua empresa,
@@ -289,7 +289,7 @@
         </div>
       </div>
     </div>
-    <img src="img/about-frame.png" class="img-fluid position-absolute top-0 end-0 z-index-negative" alt="vectors">
+    <img src="img/team-frame.png" class="team-frame position-absolute end-0" alt="vectors">
   </section>
   <section id="success-stories" class="container pt-5">
     <div class="d-flex justify-content-center">
