Update success-stories section

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       </div>
     </div>
     <div id="xs-block" class="d-block d-md-none mt-5">
-      <div id="methods-carousel" class="carousel carousel-dark slide" data-bs-ride="true">
+      <div id="methods-carousel" class="carousel carousel-dark slide" data-bs-ride="carousel">
         <div class="carousel-inner overflow-visible">
           <div class="carousel-item active">
             <div class="card drop-shadow card-rounded border-0 overflow-hidden">
@@ -291,20 +291,12 @@
     </div>
     <img src="img/team-frame.png" class="team-frame position-absolute end-0" alt="vectors">
   </section>
-  <section id="success-stories" class="container pt-5">
-    <div class="d-flex justify-content-center">
-      <h3 class="title">Já é sucesso</h3>
+  <section id="success-stories" class="container">
+    <div class="text-center">
+      <h3 class="title hud-base-color">Já é sucesso!</h3>
     </div>
-    <div id="success-stories-carousel" class="carousel carousel-dark slide" data-bs-ride="true">
-      <div class="carousel-indicators">
-        <button type="button" data-bs-target="#success-stories-carousel" data-bs-slide-to="0" class="active"
-          aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#success-stories-carousel" data-bs-slide-to="1"
-          aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#success-stories-carousel" data-bs-slide-to="2"
-          aria-label="Slide 3"></button>
-      </div>
-      <div class="carousel-inner drop-shadow-carousel border-carousel overflow-hidden height-carousel">
+    <div id="success-stories-carousel" class="carousel carousel-dark slide mt-5" data-bs-ride="carousel">
+      <div class="carousel-dimensions carousel-inner drop-shadow-carousel border-carousel overflow-hidden m-auto">
         <div class="carousel-item active">
           <img src="img/success-stories-1.png" class="d-none d-md-block w-100 h-100" alt="...">
           <img src="img/success-stories-mobile-1.png" class="d-block d-md-none w-100 h-100" alt="...">
@@ -317,6 +309,14 @@
           <img src="img/success-stories-1.png" class="d-none d-md-block w-100 h-100" alt="...">
           <img src="img/success-stories-mobile-1.png" class="d-block d-md-none w-100 h-100" alt="...">
         </div>
+      </div>
+      <div class="carousel-indicators position-static mt-5">
+        <button type="button" data-bs-target="#success-stories-carousel" data-bs-slide-to="0" class="active"
+          aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#success-stories-carousel" data-bs-slide-to="1"
+          aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#success-stories-carousel" data-bs-slide-to="2"
+          aria-label="Slide 3"></button>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#success-stories-carousel"
         data-bs-slide="prev">
