Update hallmark section

--- a/index.html
+++ b/index.html
@@ -330,94 +330,84 @@
       </button>
     </div>
   </section>
-  <section id="hallmark" class="container bg-secondary py-3">
-    <div class="row hallmark-div">
+  <section id="hallmark" class="container">
+    <div class="row">
       <div class="col-xl-5 d-flex flex-column justify-content-around pb-5">
         <div>
           <h3 class="hallmark-title hud-base-color text-center text-xl-start">Estamos aqui para criar uma marca de
             sucesso,</h3>
-          <p class="hallmark-paragraph text-center text-xl-start">por isso fortificamos primeiro nossos pilares para
-            fortificar o seu.</p>
+          <h4 class="hallmark-subtitle text-center text-xl-start">por isso fortificamos primeiro nossos pilares para
+            fortificar o seu.</h4>
         </div>
-        <div class="position-relative d-flex justify-content-center justify-content-xl-start">
-          <div class="hallmark-rectangle hud-green-bg-color w-75"></div>
+        <div class="position-relative d-flex justify-content-center justify-content-xl-start my-5">
+          <div class="hallmark-btn hallmark-blur hud-green-bg-color"></div>
           <button type="button"
-            class="hallmark-btn hallmark-btn-text hud-green-bg-color text-center position-absolute top-0 border-0 w-75">Solicite
+            class="hallmark-btn hallmark-btn-text hud-green-bg-color text-center position-absolute top-0 border-0">Solicite
             o seu orçamento</button>
         </div>
       </div>
-      <div class="col-xl-7 d-flex flex-column justify-content-evenly">
-        <div class="row">
-          <div class="col-md-6 p-2">
-            <div class="hallmark-card overflow-hidden">
-              <div class="card">
-                <div class="card-body">
-                  <div class="d-flex align-items-center h-50">
-                    <img src="img/hallmark-card-pic-1.png" alt="">
-                    <div class="ps-3">
-                      <h4 class="hallmark-card-title hud-base-color">Comunicação</h4>
-                      <div class="hallmark-card-hr hud-green-bg-color"></div>
-                    </div>
+      <div class="col-xl-7">
+        <div class="row row-cols-1 row-cols-sm-2 g-5 g-sm-3 g-xl-3 g-xxl-5">
+          <div class="col">
+            <div class="card hallmark-card">
+              <div class="card-body">
+                <div class="d-flex align-items-center">
+                  <img src="img/hallmark-card-pic-1.png" alt="" class="hallmark-card-pic">
+                  <div class="ps-3">
+                    <h5 class="hallmark-card-title hud-base-color">Comunicação</h5>
+                    <div class="hallmark-card-hr hud-green-bg-color"></div>
                   </div>
-                  <p class="hallmark-card-paragraph">Não é apenas um atendimento, criamos um relacionamento com você e
-                    sua marca. Somos "alguém" que você sempre pode contar.</p>
                 </div>
+                <p class="hallmark-card-paragraph mt-3">Não é apenas um atendimento, criamos um relacionamento com você e
+                  sua marca. Somos "alguém" que você sempre pode contar.</p>
               </div>
             </div>
           </div>
-          <div class="col-md-6 p-2">
-            <div class="hallmark-card overflow-hidden">
-              <div class="card">
-                <div class="card-body">
-                  <div class="d-flex align-items-center h-50">
-                    <img src="img/hallmark-card-pic-2.png" alt="">
-                    <div class="ps-3">
-                      <h4 class="hallmark-card-title hud-base-color text-nowrap">Foco no Digital</h4>
-                      <div class="hallmark-card-hr hud-green-bg-color"></div>
-                    </div>
+          <div class="col">
+            <div class="card hallmark-card">
+              <div class="card-body">
+                <div class="d-flex align-items-center">
+                  <img src="img/hallmark-card-pic-2.png" alt="" class="hallmark-card-pic">
+                  <div class="ps-3">
+                    <h5 class="hallmark-card-title hud-base-color text-nowrap">Foco no Digital</h5>
+                    <div class="hallmark-card-hr hud-green-bg-color"></div>
                   </div>
-                  <p class="hallmark-card-paragraph">
-                    Deixar o digital de lado é o mesmo que voltar para o século passado.
-                  </p>
                 </div>
+                <p class="hallmark-card-paragraph mt-3">
+                  Deixar o digital de lado é o mesmo que voltar para o século passado.
+                </p>
               </div>
             </div>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6 p-2">
-            <div class="hallmark-card overflow-hidden">
-              <div class="card">
-                <div class="card-body">
-                  <div class="d-flex align-items-center h-50">
-                    <img src="img/hallmark-card-pic-3.png" alt="">
-                    <div class="ps-3">
-                      <h4 class="hallmark-card-title hud-base-color">#Team HuD</h4>
-                      <div class="hallmark-card-hr hud-green-bg-color"></div>
-                    </div>
+          <div class="col">
+            <div class="card hallmark-card">
+              <div class="card-body">
+                <div class="d-flex align-items-center">
+                  <img src="img/hallmark-card-pic-3.png" alt="" class="hallmark-card-pic">
+                  <div class="ps-3">
+                    <h5 class="hallmark-card-title hud-base-color">#Team HuD</h5>
+                    <div class="hallmark-card-hr hud-green-bg-color"></div>
                   </div>
-                  <p class="hallmark-card-paragraph">
-                    Somos um time, vamos trabalhar juntos sempre.
-                  </p>
                 </div>
+                <p class="hallmark-card-paragraph mt-3">
+                  Somos um time, vamos trabalhar juntos sempre.
+                </p>
               </div>
             </div>
           </div>
-          <div class="col-md-6 p-2">
-            <div class="hallmark-card overflow-hidden">
-              <div class="card">
-                <div class="card-body">
-                  <div class="d-flex align-items-center h-50">
-                    <img src="img/hallmark-card-pic-4.png" alt="">
-                    <div class="ps-3">
-                      <h4 class="hallmark-card-title hud-base-color">Sem você a HuD não existiria</h4>
-                      <div class="hallmark-card-hr hud-green-bg-color"></div>
-                    </div>
+          <div class="col">
+            <div class="card hallmark-card">
+              <div class="card-body">
+                <div class="d-flex align-items-center">
+                  <img src="img/hallmark-card-pic-4.png" alt="" class="hallmark-card-pic">
+                  <div class="ps-3">
+                    <h5 class="hallmark-card-title hud-base-color">Sem você a HuD não existiria</h5>
+                    <div class="hallmark-card-hr hud-green-bg-color"></div>
                   </div>
-                  <p class="hallmark-card-paragraph">
-                    Com os seus resultados também avançamos
-                  </p>
                 </div>
+                <p class="hallmark-card-paragraph mt-3">
+                  Com os seus resultados também avançamos
+                </p>
               </div>
             </div>
           </div>
