Update home section to main section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <section id="home" class="bg-home-img bg-cover d-flex align-items-center justify-content-center">
+  <main id="home" class="home-wrapper bg-home-img bg-cover d-flex align-items-center justify-content-center">
     <nav class="navbar navbar-expand-sm fixed-top">
       <div class="container-lg">
         <a class="navbar-brand" href="#">
@@ -39,11 +39,11 @@
       </div>
     </nav>
     <div class="d-flex flex-column align-items-center px-2 text-center">
-      <h1 class="hud-white-color">É chegada a hora de</h1>
-      <h2 class="hud-white-color d-inline-block">se posicionar no mercado digital<span class="hud-green-color home-span">_</span></h2>
+      <h1 class="hud-white-color home-h1">É chegada a hora de</h1>
+      <h2 class="hud-white-color home-h2 d-inline-block">se posicionar no mercado digital<span class="hud-green-color home-span">_</span></h2>
       <button type="button" class="home-btn mt-3">Clique aqui e saiba mais</button>
     </div>
-  </section>
+  </main>
   <section id="methods" class="container">
     <h3 class="title hud-base-color">Nossos métodos</h3>
     <div id="md-block" class="row g-5 mt-2 d-none d-md-flex">
